		that's an exceptionally unusual and rare need.
	De-finalized methods in KozaFitness.  Thanks to Doug <doug1@ten-13.org>
	InterPopulationExchange now clones its migrants
	Tweaks to SteadyStateEvolutionState to properly print the last statistics
		information out for the final generation
	Removed a vestigial setup() call in VectorSpecies
	ListCrossoverPipeline handles 2-point crossover with more uniform choices
		of loci (using rejection sampling).
	GE now can handle wrapping of genomes when they produce oversize trees
	Fixed problem where GE mapping wasn't bothering to set the argposition or
		parent of the GPnodes.  This didn't cause problems unless we were
		doing strongly typed GP.
	Changes to Exchanger.process(...) so it does processing on migration 
		rather than on IMmigration.
	ParameterDatabase.getClassForParameter(...) now returns Classes, not
		Objects, as its return type.
	Bug fix to SimpleEvaluator.expand(), which was setting a local variable
		rather than an instance variable, resulting in a null pointer
		exception on contract().  Thanks to Eric 'Siggy' Scott 
		<escott8@gmu.edu>
	KozaFitness now uses standardized rather than adjusted fitness to do
		comparison (equivalentTo, betterthan), to reduce floating point
		errors.  Thanks to Raymond Shpeley <rshpeley@ualberta.ca>
	MAJOR BACKWARD-INCOMPATIBLE CHANGE: we have updated all use of floats
		in ECJ fitnesses to doubles.  This involved changing not only
		the fitness classes but certain selection methods and all of
		the application demos so they don't unnecessarily cast into
		floats in the first place.
	Updates to tutorial4
	Bug fix to IntegerVectorIndividual, which properly handles mutation
		probabilities in random sized individuals
	Same for BitVectorIndividual and GeneVectorIndividual
	RegERC's hash function modified to include doubles
	MAJOR BACKWARD-INCOMPATIBLE CHANGE: further updates of floats to
		doubles, this time in most other cases (random distributions,
		etc.) throughout ECJ.